<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_change_pass"
    tools:context="com.example.authoricator.ChangePassActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:id="@+id/chcodes">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/passcode_change_full"
            android:gravity="left">

        </TextView>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/oldcodes"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:text="@string/old_text"
                android:gravity="center">
            </TextView>

            <EditText
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:gravity="center"
                android:id="@+id/oldpasscode1"
                android:inputType="number"
                android:maxLength="1">

            </EditText>
            <EditText
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:gravity="center"
                android:id="@+id/oldpasscode2"
                android:inputType="number"
                android:maxLength="1">

            </EditText>
            <EditText
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:gravity="center"
                android:id="@+id/oldpasscode3"
                android:inputType="number"
                android:maxLength="1">

            </EditText>
            <EditText
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:gravity="center"
                android:id="@+id/oldpasscode4"
                android:inputType="number"
                android:maxLength="1">

            </EditText>

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/newcodes"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:text="@string/new_text"
                android:gravity="center">
            </TextView>

            <EditText
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:gravity="center"
                android:id="@+id/newpasscode1"
                android:inputType="number"
                android:maxLength="1">

            </EditText>
            <EditText
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:gravity="center"
                android:id="@+id/newpasscode2"
                android:inputType="number"
                android:maxLength="1">

            </EditText>
            <EditText
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:gravity="center"
                android:id="@+id/newpasscode3"
                android:inputType="number"
                android:maxLength="1">

            </EditText>
            <EditText
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:gravity="center"
                android:id="@+id/newpasscode4"
                android:inputType="number"
                android:maxLength="1">

            </EditText>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/chcodes"
        android:id="@+id/cherrormessage"
        android:text="@string/errormessage"
        android:layout_marginTop="120dp"
        android:layout_centerHorizontal="true">

    </TextView>

    <Button
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:text="@string/change"
        android:layout_below="@id/cherrormessage"
        android:layout_marginTop="20dp"
        android:id="@+id/changebutton"
        android:layout_centerHorizontal="true">
    </Button>
</RelativeLayout>
