<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_enter" tools:context="com.example.authoricator.EnterActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/passcodeenter"
        android:id="@+id/enfirstmessage" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/entercodes"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp">

        <EditText
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:id="@+id/enpasscode1"
            android:inputType="number"
            android:maxLength="1">

        </EditText>
        <EditText
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:id="@+id/enpasscode2"
            android:inputType="number"
            android:maxLength="1">

        </EditText>
        <EditText
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:id="@+id/enpasscode3"
            android:inputType="number"
            android:maxLength="1">

        </EditText>
        <EditText
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:id="@+id/enpasscode4"
            android:inputType="number"
            android:maxLength="1">

        </EditText>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/entercodes"
        android:id="@+id/enerrormessage"
        android:text="@string/errormessage"
        android:layout_marginTop="180dp"
        android:layout_centerHorizontal="true">

    </TextView>

    <Button
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:text="@string/enter"
        android:layout_below="@id/enerrormessage"
        android:layout_marginTop="20dp"
        android:id="@+id/enterbutton"
        android:layout_centerHorizontal="true">
    </Button>
</RelativeLayout>
